2006-08-01  Mike Cvet  <mcvet@redhat.com>

	* Gui.java (MultipleInvocationEvent.run): Fixed a race condition
	but resulting in siglongjmp() errors.

2006-08-01  Nurdin Premji  <npremji@redhat.com>

	* test/dogtail_scripts/frysk_suite.in : Added in TestEventViewerMarker.py.
	Uncommented TestEventViewerButtons testcase.
	* test/dogtail_scripts/TestEventViewerMarkers.py : Added.

2006-07-31  Mike Cvet  <mcvet@redhat.com>

	* test/TestFilterManager.java (testAddingRemovingFilters): Added
	tests for some new Filters.

2006-07-28  Mike Cvet  <mcvet@redhat.com>

	* glade/processpicker.glade: Added a cancel button, among other
	changes.
	* sessions/ProcessPicker.java (setListeners): Added cancelButton
	actions.
	(.lifeCycleEvent): Added actions for getting back to the session
	manager after a cancel.
	* sessions/DebugProcess.java (removeProcsMinusObserver): Added.
	* sessions/Session.java: Applied GNU formatting.
	* SessionManagerGui.java (processPicker): Refactored.
	(.buttonEvent): Put the hideAll() call for the SessionManagerGui
	into an approparite 'if' clause.
	(Gui): Remove glade assignments to the ProcessPicker.
	(gui): Sends in the glade paths to the SessionManagerGui.
	(getGlade): Added.
	(.buttonEvent): Now instantiates new LibGlades for new
	ProcessPickers.
	* sessions/SessionManager.java: Applied GNU formatting.
	* register/RegisterWindowFactory.java: Commented.
	* memory/MemoryWindowFactory.java: Commented.

2006-07-27  Mike Cvet  <mcvet@redhat.com>

	* register/RegisterWindowFactory.java: Added some imports, added
	new global variables.
	(setPaths): Added.
	(createRegisterWindow): Uses the task observer thread to finish
	initializing the now-dynamic RegisterWindow. Also uses the new
	TaskBlockCounter.
	(finishRegWin): Build new LibGlade objects for multiple windows
	via the new directory string array. Edited LifeCycleEvent and 
	Query to hide the current window.
	(setGladePath): Removed.
	(setRegWin): Added.
	(killRegWin): Removed.
	(RegWinListener): Added.